--- a/Tu/Main.storyboard
+++ b/Tu/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nm0-nG-bdZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nm0-nG-bdZ">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -30,41 +30,51 @@
         <scene sceneID="9V4-2n-cmZ">
             <objects>
                 <tableViewController title="News Feed" id="P1a-bg-dx8" customClass="NewsFeedTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" id="bQy-F3-ASU">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="135" sectionHeaderHeight="22" sectionFooterHeight="22" id="bQy-F3-ASU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="recentMatchCell" rowHeight="100" id="alf-1p-Cb9" customClass="NewsFeedTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="recentMatchCell" rowHeight="135" id="alf-1p-Cb9" customClass="NewsFeedTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="alf-1p-Cb9" id="Fmz-ld-zAN">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="datetime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="kr5-iS-9FI" userLabel="DateTimeLabel">
-                                            <rect key="frame" x="241" y="78" width="71" height="14"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="datetime" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="kr5-iS-9FI" userLabel="DateTimeLabel">
+                                            <rect key="frame" x="249" y="120" width="71" height="14"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Zr3-Su-Rop" userLabel="ContentLabel">
-                                            <rect key="frame" x="8" y="8" width="304" height="62"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="Contents" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aqk-Vx-jjy" userLabel="ContentLabel">
+                                            <rect key="frame" x="8" y="47" width="304" height="49"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsZ-wI-8kH" userLabel="SummaryLabel">
+                                            <rect key="frame" x="8" y="5" width="304" height="40"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="kr5-iS-9FI" firstAttribute="top" secondItem="Zr3-Su-Rop" secondAttribute="bottom" id="hYH-DR-eau"/>
-                                        <constraint firstItem="kr5-iS-9FI" firstAttribute="trailing" secondItem="Fmz-ld-zAN" secondAttribute="trailingMargin" id="l5Y-Je-RAZ"/>
-                                        <constraint firstItem="Zr3-Su-Rop" firstAttribute="top" secondItem="Fmz-ld-zAN" secondAttribute="topMargin" constant="4" id="t4y-J5-jcM"/>
-                                        <constraint firstItem="Zr3-Su-Rop" firstAttribute="leading" secondItem="Fmz-ld-zAN" secondAttribute="leadingMargin" constant="2" id="u7f-Gk-9Th"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="kr5-iS-9FI" secondAttribute="bottom" id="x5A-IH-94l"/>
-                                        <constraint firstItem="Zr3-Su-Rop" firstAttribute="trailing" secondItem="Fmz-ld-zAN" secondAttribute="trailingMargin" id="xug-Qz-RGo"/>
+                                        <constraint firstItem="Aqk-Vx-jjy" firstAttribute="trailing" secondItem="Fmz-ld-zAN" secondAttribute="trailingMargin" id="0YA-lk-Afz"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="kr5-iS-9FI" secondAttribute="trailing" id="3T5-5X-s2T"/>
+                                        <constraint firstItem="GsZ-wI-8kH" firstAttribute="top" secondItem="Fmz-ld-zAN" secondAttribute="topMargin" constant="2" id="60v-Po-YSP"/>
+                                        <constraint firstItem="Aqk-Vx-jjy" firstAttribute="leading" secondItem="Fmz-ld-zAN" secondAttribute="leadingMargin" id="G2C-jn-1Nz"/>
+                                        <constraint firstItem="kr5-iS-9FI" firstAttribute="top" secondItem="Aqk-Vx-jjy" secondAttribute="bottom" constant="4" id="Iaw-81-RkS"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="kr5-iS-9FI" secondAttribute="bottom" id="KyN-sT-kDL"/>
+                                        <constraint firstItem="GsZ-wI-8kH" firstAttribute="trailing" secondItem="Fmz-ld-zAN" secondAttribute="trailingMargin" id="Uc4-GA-tC9"/>
+                                        <constraint firstItem="Aqk-Vx-jjy" firstAttribute="top" secondItem="GsZ-wI-8kH" secondAttribute="bottom" constant="2" id="nvL-kQ-xVs"/>
+                                        <constraint firstItem="GsZ-wI-8kH" firstAttribute="leading" secondItem="Fmz-ld-zAN" secondAttribute="leadingMargin" id="ua0-hO-kI8"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="contentLabel" destination="Zr3-Su-Rop" id="Wf8-3p-gFr"/>
+                                    <outlet property="contentLabel" destination="Aqk-Vx-jjy" id="SY3-lz-Zee"/>
                                     <outlet property="datetimeLabel" destination="kr5-iS-9FI" id="4wb-Hp-pJD"/>
+                                    <outlet property="summaryLabel" destination="GsZ-wI-8kH" id="IgS-GI-Ld7"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
